# tisch

./: .gitignore  .travis.yml  LICENSE.txt  LearningSQLExample.sql  NOTICE.txt  README.md  default.nix  opaleye-sot.cabal  shell.nix  tisch.cabal
src/lib/: Tisch.hs
src/lib/Opaleye/: SOT.hs
src/lib/Opaleye/SOT/: Extra.hs  Internal.hs  Run.hs  Tutorial.hs
src/lib/Opaleye/SOT/Internal/: Aggregation.hs  Compat.hs  Debug.hs  Kol.hs  Koln.hs  Profunctors.hs  Query.hs  Record.hs  Singletons.hs  Table.hs  Test.hs
src/lib/Tisch/: Extra.hs  Run.hs
src/lib/Tisch/Internal/: Aggregation.hs  Compat.hs  Debug.hs  Fun.hs  Kol.hs  Koln.hs  Profunctors.hs  Query.hs  Record.hs  Singletons.hs  Table.hs  Window.hs
tests/: Main.hs  Tutorial.hs
