name:                opaleye-sot
version:             0.1
author:              Renzo Carbonara
maintainer:          renzoλcarbonara.com.ar
copyright:           Renzo Carbonara 2015
license:             BSD3
license-file:        LICENSE.txt
extra-source-files:  README.md CHANGELOG.md
category:            Data
build-type:          Simple
cabal-version:       >=1.18
synopsis:            Opaleye's sugar on top.
description:         Opaleye's sugar on top.
homepage:            https://github.com/k0001/opaleye-sot
bug-reports:         https://github.com/k0001/opaleye-sot/issues


library
  hs-source-dirs: src/lib
  default-language: Haskell2010
  exposed-modules:
      Opaleye.SOT
      Opaleye.SOT.Internal
  build-depends:
      -- NOTE: The dependencies without specific version ranges are transitional
      aeson
    , base >=4.7 && <4.9
    , bytestring
    , case-insensitive
    , exceptions >=0.8 && <0.9
    , HList >=0.4 && <0.5
    , lens >=4.12 && <4.14
    , mtl >=2.2 && <2.3
    , opaleye >=0.4 && <0.5
    , postgresql-simple
    , product-profunctors
    , profunctors
    , singletons >=1.1 && <2.1
    , text
    , transformers >=0.4 && <0.5
    , time
    , uuid
  ghc-options: -Wall -O

test-suite tests
  hs-source-dirs: tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules: Tutorial
  ghc-options: -Wall -rtsopts -O0
  build-depends:
      base
    , HList
    , lens
    , mtl
    , opaleye
    , opaleye-sot
    , postgresql-simple
    , time
