name:                opaleye-sot
version:             0.1
author:              Renzo Carbonara
maintainer:          renzoλcarbonara.com.ar
copyright:           Renzo Carbonara 2015
license:             BSD3
license-file:        LICENSE.txt
extra-source-files:  README.md CHANGELOG.md
category:            Data
build-type:          Simple
cabal-version:       >=1.18
synopsis:            Opaleye's sugar on top.
description:         Opaleye's sugar on top.
homepage:            https://github.com/k0001/opaleye-sot
bug-reports:         https://github.com/k0001/opaleye-sot/issues


library
  hs-source-dirs: src/lib
  default-language: Haskell2010
  exposed-modules:
      Opaleye.SOT
      Opaleye.SOT.Run
      Opaleye.SOT.Extra
      Opaleye.SOT.Internal.Aggregation
      Opaleye.SOT.Internal.Compat
      Opaleye.SOT.Internal.Debug
      Opaleye.SOT.Internal.Kol
      Opaleye.SOT.Internal.Koln
      Opaleye.SOT.Internal.Profunctors
      Opaleye.SOT.Internal.Query
      Opaleye.SOT.Internal.Record
      Opaleye.SOT.Internal.Singletons
      Opaleye.SOT.Internal.Table
  build-depends:
      aeson >=0.11 && <0.12
    , base >=4.7 && <5.0
    , bytestring
    , case-insensitive
    , exceptions >=0.8 && <0.9
    , lens >=4.14 && <4.15
    , mtl >=2.2 && <2.3
    , opaleye >=0.5 && <0.6
    , postgresql-simple
    , product-profunctors
    , profunctors
    , semigroups
    , singletons >=2.2 && <2.3
    , tagged
    , text
    , transformers >=0.5 && <0.6
    , time
    , uuid
  ghc-options: -Wall -Werror

test-suite tests
  hs-source-dirs: tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules: Tutorial
  ghc-options: -Wall -rtsopts -threaded
  build-depends:
      base
    , lens
    , mtl
    , opaleye
    , opaleye-sot
    , postgresql-simple
    , time
