name:                tisch
version:             0.1
author:              Renzo Carbonara
maintainer:          renλren!zone
copyright:           Renzo Carbonara 2015-2016
license:             Apache-2.0
license-file:        LICENSE.txt
extra-source-files:  NOTICE.txt README.md CHANGELOG.md
category:            Data
build-type:          Simple
cabal-version:       >=1.18
synopsis:            Type-safe SQL interactions with PostgreSQL, based on Opaleye.
description:         Type-safe SQL interactions with PostgreSQL, based on Opaleye.
homepage:            https://github.com/k0001/tisch
bug-reports:         https://github.com/k0001/tisch/issues

library
  hs-source-dirs: src/lib
  default-language: Haskell2010
  exposed-modules:
      Tisch
      Tisch.Run
      Tisch.Extra
      Tisch.Internal.Aggregation
      Tisch.Internal.Compat
      Tisch.Internal.Debug
      Tisch.Internal.Fun
      Tisch.Internal.Kol
      Tisch.Internal.Koln
      Tisch.Internal.Profunctors
      Tisch.Internal.Query
      Tisch.Internal.Record
      Tisch.Internal.Singletons
      Tisch.Internal.Table
      Tisch.Internal.Window
  build-depends:
      aeson
    , base >=4.9 && <5.0
    , bytestring
    , case-insensitive
    , exceptions
    , lens
    , mtl
    , opaleye
    , postgresql-simple
    , product-profunctors
    , profunctors
    , semigroups
    , scientific
    , singletons
    , tagged
    , text
    , transformers
    , time
    , uuid
  ghc-options: -Wall -Werror

test-suite tests
  hs-source-dirs: tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules: Tutorial
  ghc-options: -Wall -rtsopts -threaded
  build-depends:
      aeson
    , base
    , bytestring
    , case-insensitive
    , exceptions
    , lens
    , mtl
    , opaleye
    , tisch
    , postgresql-simple
    , product-profunctors
    , profunctors
    , semigroups
    , scientific
    , singletons
    , tagged
    , text
    , time
    , transformers
    , uuid
